<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWt"
        android:layout_width="107dp"
        android:layout_height="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/textViewWt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextwtval"
        android:layout_width="121dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/editTextwtval"
        android:inputType="numberDecimal"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonsave"
        android:layout_width="388dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:text="@string/buttonsave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewdrinksize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="250dp"
        android:text="@string/textViewdrinksize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton1oz"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/radioButton1oz" />

        <RadioButton
            android:id="@+id/radioButton5oz"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton5oz" />

        <RadioButton
            android:id="@+id/radioButton12oz"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioButton12oz" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewalcpercnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="320dp"
        android:text="@string/textViewalcpercnt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBaralcpercent"
        android:layout_width="247dp"
        android:layout_height="10dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="320dp"
        android:max="25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewalcpercentval"
        android:layout_width="42dp"
        android:layout_height="23dp"
        android:layout_marginStart="335dp"
        android:layout_marginTop="320dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewpercentsymbol"
        android:layout_width="38dp"
        android:layout_height="18dp"
        android:layout_marginStart="378dp"
        android:layout_marginTop="320dp"
        android:text="@string/textViewpercentsymbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonadddrink"
        android:layout_width="180dp"
        android:layout_height="47dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="390dp"
        android:text="@string/buttonadddrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonreset"
        android:layout_width="180dp"
        android:layout_height="47dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="390dp"
        android:text="@string/buttonreset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewbaclevel"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="460dp"
        android:text="@string/textViewbaclevel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8levelval"
        android:layout_width="92dp"
        android:layout_height="40dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="460dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarlevel"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="366dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="510dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewyourstatus"
        android:layout_width="102dp"
        android:layout_height="33dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="570dp"
        android:textStyle="bold"
        android:text="@string/textViewyourstatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewstatusval"
        android:layout_width="103dp"
        android:layout_height="33dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="570dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginStart="280dp"
        android:layout_marginTop="56dp"
        android:text="@string/female_st"
        android:textOff="@string/female"
        android:textOn="@string/male"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>